@@ -14,22 +14,29 @@ using namespace yarp::os::impl;
 using namespace yarp::os;
 using namespace std;
 
-bool TcpRosCarrier::checkHeader(const Bytes& header) {
+void TcpRosCarrier::setParameters(const Bytes& header) {
     if (header.length()!=8) {
-        return false;
+        return;
     }
     Bytes h1(header.get(),4);
     Bytes h2(header.get()+4,4);
     headerLen1 = NetType::netInt(h1);
     headerLen2 = NetType::netInt(h2);
-    printf("tcpros? %d %d\n", headerLen1,headerLen2);
-    if (headerLen1<60000&&headerLen1>=0 &&
-        headerLen2<60000&&headerLen2>=0) {
-        // plausible I guess, and no real choice
-        printf("ok, tcpros\n");
-        return true;
+}
+
+bool TcpRosCarrier::checkHeader(const Bytes& header) {
+    if (header.length()!=8) {
+        return false;
     }
-    return false;
+    setParameters(header);
+    if (!(headerLen1<60000&&headerLen1>0 &&
+          headerLen2<60000&&headerLen2>0)) {
+        // not tcpros
+        return false;
+    }
+    // plausibly tcpros.
+    printf("tcpros! %d %d\n", headerLen1,headerLen2);
+    return true;
 }
 
 
@@ -110,6 +117,73 @@ bool TcpRosCarrier::expectReplyToHeader(Protocol& proto) {
     
 bool TcpRosCarrier::expectSenderSpecifier(Protocol& proto) {
     proto.setRoute(proto.getRoute().addFromName("tcpros"));
+
+    printf("Trying for tcpros header\n");
+    ManagedBytes m(headerLen1);
+    Bytes mrem(m.get()+4,m.length()-4);
+    NetInt32 ni = headerLen2;
+    memcpy(m.get(),(char*)(&ni), 4);
+    printf("reading %d bytes\n", mrem.length());
+    int res = NetType::readFull(proto.is(),mrem);
+    printf("read %d bytes\n", res);
+    if (res!=mrem.length()) {
+        printf("Fail %s %d\n", __FILE__, __LINE__);
+        return false;
+    }
+    RosHeader header;
+    header.readHeader(string(m.get(),m.length()));
+
+    // let's just ignore everything that is sane and holy, and
+    // send the same header right back
+
+    string header_serial = header.writeHeader();
+    string header_len(4,'\0');
+    char *at = (char*)header_len.c_str();
+    RosHeader::appendInt(at,header_serial.length());
+    printf("Writing %s -- %d bytes\n", 
+           RosHeader::showMessage(header_len).c_str(),
+           header_len.length());
+    
+    Bytes b1((char*)header_len.c_str(),header_len.length());
+    proto.os().write(b1);
+    printf("Writing %s -- %d bytes\n", 
+           RosHeader::showMessage(header_serial).c_str(),
+           header_serial.length());
+    Bytes b2((char*)header_serial.c_str(),header_serial.length());
+    proto.os().write(b2);
+
+    /*
+    {
+    char mlen[4];
+    Bytes mlen_buf(mlen,4);
+    NetType::netInt(8,mlen_buf);
+    proto.os().write(mlen_buf);
+    NetType::netInt(4,mlen_buf);
+    proto.os().write(mlen_buf);
+    mlen[0] = 'y';
+    mlen[1] = 'r';
+    mlen[2] = 'p';
+    mlen[3] = '\0';
+    proto.os().write(mlen_buf);
+    printf("Sent dummy data 1\n");
+    }
+
+    {
+    char mlen[4];
+    Bytes mlen_buf(mlen,4);
+    NetType::netInt(8,mlen_buf);
+    proto.os().write(mlen_buf);
+    NetType::netInt(4,mlen_buf);
+    proto.os().write(mlen_buf);
+    mlen[0] = 'y';
+    mlen[1] = 'r';
+    mlen[2] = 'p';
+    mlen[3] = '\0';
+    proto.os().write(mlen_buf);
+    printf("Sent dummy data 2\n");
+    }
+    */
+
     return true;
 }
 
@@ -118,6 +192,8 @@ bool TcpRosCarrier::write(Protocol& proto, SizedWriter& writer) {
     // For now, we will require objects being written to be either:
     //   + raw data
     //   + raw data, with a Bottle compatible blob header.
+
+    printf("write called\n");
 
     if (writer.length()<1) {
         fprintf(stderr,"tcpros_carrier given no data");
@@ -156,6 +232,8 @@ bool TcpRosCarrier::write(Protocol& proto, SizedWriter& writer) {
         }
     }
 
+    printf("sending length %d\n", remaining);
+
     NetInt32 len_out = remaining;
     Bytes blen_out((char*)&len_out,sizeof(len_out));
     proto.os().write(blen_out);
@@ -164,11 +242,14 @@ bool TcpRosCarrier::write(Protocol& proto, SizedWriter& writer) {
         const char *data = writer.data(i);
         int len = writer.length(i);
         if (len>payload_offset) {
+            printf("sending %d bytes\n", len-payload_offset);
             Bytes b((char*)data+payload_offset,len-payload_offset);
             proto.os().write(b);
         }
         payload_offset = 0;
     }
+
+    printf("done sending\n");
     
     return proto.getStreams().isOk();
 }
