@@ -1,3 +1,10 @@
+2010-06-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/carriers/tcpros_carrier/TcpRosCarrier.cpp: implemented
+	rudimentary writing to ROS subscribers.  Be sure
+	to read src/carriers/tcpros_carrier/README.TXT if you are 
+	tempted to play, this is not user-friendly stuff yet.
+
 2010-06-03  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/carriers/tcpros_carrier/CMakeLists.txt: implemented
